# grog

./: .gitmodules  CMakeLists.txt  shell.nix
src/: DistrhoPluginInfo.h  GrogPlugin.cpp  GrogPlugin.hpp  GrogUI.cpp  GrogUI.hpp  ImguiUI.cpp  ImguiUI.hpp
src/Common/: AtomicSharedPtr.cpp  AtomicSharedPtr.hpp  Filesystem.cpp  Filesystem.hpp
src/DSP/: GrogPlugin.cpp  GrogPlugin.hpp  Processor.cpp  Processor.hpp
src/UI/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Event.cpp  Event.hpp  Filesystem.hpp  Font.hpp  GrogUI.cpp  GrogUI.hpp  ImguiUI.cpp  ImguiUI.hpp  Module.cpp  Module.hpp  Node.cpp  Node.hpp  NodeBuilder.cpp  NodeBuilder.hpp  NodeRegistry.hpp  ResourceManager.cpp  ResourceManager.hpp
src/UI/Modules/: AsyncResourceManager.cpp  AsyncResourceManager.hpp  GraphEditor.cpp  GraphEditor.hpp  Logger.cpp  Logger.hpp  ModalWindowManager.cpp  ModalWindowManager.hpp
